--- a/src/cale.less
+++ b/src/cale.less
@@ -40,7 +40,8 @@
 		box-shadow:inset 0 1px 2px #b1b7c5;
 	}
 	.win{
-		margin:0 auto;width:267px;height:195px;-webkit-border-radius:4px;
+		margin:0 auto;
+		width:90%;height:195px;-webkit-border-radius:4px;
 		border:1px solid;border-color:#323943 #505261 #666779 #101322; position:relative;
 		background-image:-webkit-gradient(linear, left top, left bottom,
 			from(#41434f),
@@ -95,6 +96,8 @@
 			i{font-style:normal;font-size:15px;color:#7f8082;}
 		}
 	}
+
+	//TODO flex and autoprefix
 	.day{width:163px;}
 	.hour{width:44px;}
 	.minute{width:44px;}
