--- a/src/cale.less
+++ b/src/cale.less
@@ -1,5 +1,5 @@
 //选择“日期/时/分”
-#TimeChooserPanel{
+#lunar_cale_panel{
 	* {
 		margin:0;
 		padding:0;
@@ -51,8 +51,34 @@
 			to(#41434f)
 		);
 	}
+
+	.wdecoration {
+		display: flex;
+
+		.wbk,
+		.wline {
+
+		}
+
+		.wbk{
+			flex: 1;
+			height:195px;display:inline-block;margin:0 2px;
+			background-image:-webkit-gradient(linear, left top, left bottom,
+				from(#b8bbc4),
+				color-stop(21%, #fbfbfd),
+				color-stop(50%, #fbfbfd),
+				color-stop(79%, #fbfbfd),
+				to(#b8bbc4)
+			);
+		}
+		.wline{
+			height:195px;display:inline-block;
+			width:2px;background:rgba(7,11,12,.75);
+		}
+	}
+
 	.wglass{
-		width:100%;height:41px;position:absolute;top:78px;left:0;
+		width:100%;height:41px;position:absolute;top:76px;left:0;
 		border:solid #555a60;border-width:1px 0 1px 0;
 		background-image:-webkit-gradient(linear, left top, left bottom,
 			from(rgba(217,223,237,.7)),
@@ -62,72 +88,44 @@
 		);
 		box-shadow:inset 0 1px 1px #e8eff9, 0 1px 1px #b1b0be;
 	}
-	.wbk{
-		height:195px;display:inline-block;float:left;margin:0 2px;
-		background-image:-webkit-gradient(linear, left top, left bottom,
-			from(#b8bbc4),
-			color-stop(21%, #fbfbfd),
-			color-stop(50%, #fbfbfd),
-			color-stop(79%, #fbfbfd),
-			to(#b8bbc4)
-		);
-	}
-	.wline{
-		height:195px;display:inline-block;float:left;
-		width:2px;background:rgba(7,11,12,.75);
-	}
+
 	.wmain{
 		width:100%;height:195px;position:absolute;left:0;top:0;
-	}
-	.wbox{
-		height:195px;overflow:hidden;display:inline-block;float:left;margin:0 2px;
-		box-shadow:inset 0 -7px 7px #a8a8b2, inset 0 7px 7px #a8a8b2;
+		display: flex;
 
-		&.day,
-		&.hour{
-			margin-right:4px;
-		}
-		ol{list-style-type:none;display:block;text-align:center;}
-		li{height:39px;line-height:39px;display:block;
-			color:#0a0a0c;font-size:18px;}
-		&.day {
-			ol{padding-right:19px;text-align:right;}
-			li.today{font-size:20px;color:#2f6df2;text-shadow:0 1px #ededed;}
-			i{font-style:normal;font-size:15px;color:#7f8082;}
-		}
-	}
+		.wbox{
+			@mright: 4px;
+			height:195px;overflow:hidden;display:inline-block;margin:0 2px;
+			box-shadow:inset 0 -7px 7px #a8a8b2, inset 0 7px 7px #a8a8b2;
 
-	//TODO flex and autoprefix
-	.day{width:163px;}
-	.hour{width:44px;}
-	.minute{width:44px;}
-}
+			ol{list-style-type:none;display:block;text-align:center;}
+			li{height:39px;line-height:39px;display:block;color:#0a0a0c;font-size:18px;}
 
-//选择“年/月/日”
-#DateChooserPanel{
-	&:extend(#TimeChooserPanel all);
+			flex: 1;
 
-	.year{width:111px;}
-	.month{width:70px;}
-	.date{width:70px;}
-
-	.wbox{
-		@mright: 4px;
-
-		ol{list-style-type:none;display:block;text-align:center;}
-		li{height:39px;line-height:39px;display:block;color:#0a0a0c;font-size:18px;}
-
-		&.year{
-			margin-right: @mright;
-			ol{
-				padding-right:36px;text-align:right;
+			&.day,
+			&.hour{
+				margin-right:4px;
 			}
-			i{
-				font-style:normal;font-size:15px;color:#7f8082;
+
+			&.year{
+				margin-right: @mright;
+				ol{
+				}
+				i{
+					font-style:normal;font-size:15px;color:#7f8082;
+				}
+			}
+			&.day {
+				ol{
+				}
+				li.today{font-size:20px;color:#2f6df2;text-shadow:0 1px #ededed;}
+				i{font-style:normal;font-size:15px;color:#7f8082;}
+			}
+			&.month{
+				margin-right: @mright;
 			}
 		}
-		&.month{
-			margin-right: @mright;
-		}
 	}
+
 }
