--- a/src/cale.less
+++ b/src/cale.less
@@ -70,8 +70,10 @@ input[type=checkbox].mod_round_checkbox{
 		padding: 0 3%;
 
 		label {
-			flex: 1;
 			text-align: left;
+		}
+		p {
+			flex: 1;
 		}
 		.finishBtn{display:inline-block;
 			width:43px;height:28px;border:1px solid #0e2036;-webkit-border-radius:4px;
