--- a/src/cale.less
+++ b/src/cale.less
@@ -166,7 +166,9 @@ input[type=checkbox].mod_round_checkbox{
 
 		.wbox{
 			@mright: 4px;
-			height:195px;overflow:hidden;display:inline-block;margin:0 2px;
+			height:195px;overflow:hidden;
+			display:block; //如果是inline-block,会在旧安卓失效
+			margin:0 2px;
 			box-shadow:inset 0 -7px 7px #a8a8b2, inset 0 7px 7px #a8a8b2;
 
 			ol{list-style-type:none;display:block;text-align:center;}
