--- a/src/cale.less
+++ b/src/cale.less
@@ -50,7 +50,11 @@ input[type=checkbox].mod_round_checkbox{
 	ul,ol{
 		list-style-type:none;
 	}
+	small {
+		display: inline-block;
+	}
 
+	background-color: #fff;
 	width:100%;
 	text-align:center;
 	position:fixed;
